<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/shape_tv_operation_dialog_btn_normal_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/dialog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_60px"
        android:text="@string/dialog_content_give_up_submit"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_16sp" />

    <View
        android:id="@+id/line_mid"
        style="@style/horizontal_line"
        android:layout_height="@dimen/dialog_line_height"
        android:layout_below="@+id/dialog_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_mid"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/single_line_height_132px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_default_cancel_title"
            android:textColor="@color/dialog_cancel_btn_color_selector"
            android:textSize="@dimen/textsize_16sp" />

        <View
            android:id="@+id/line_btn_split"
            style="@style/vertical_line"
            android:layout_width="@dimen/dialog_line_height" >
        </View>

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/single_line_height_132px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_default_confirm_title"
            android:textColor="@color/dialog_confirm_btn_color_selector"
            android:textSize="@dimen/textsize_16sp" />

    </LinearLayout>

</RelativeLayout>