<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:layout_width="@dimen/upgrade_dialog_width"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_bg"
        android:minHeight="172dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dip"
            android:paddingRight="8dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="30dip" >

                <View
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:background="@drawable/ic_launcher"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/versionName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:paddingLeft="14dip"
                    android:paddingRight="14dip"
                    android:paddingTop="10dip"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/versionTime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:includeFontPadding="false"
                    android:paddingLeft="14dip"
                    android:paddingRight="14dip"
                    android:paddingTop="4dip"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textsize_12sp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingLeft="25dip"
                    android:paddingRight="14dip"
                    android:paddingTop="18dip"
                    android:text="@string/upgrade_dialog_new_version_feature"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/textsize_14sp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="16dip"
                    android:layout_marginRight="16dip"
                    android:layout_marginTop="10dip"
                    android:background="@color/line_color_gray" />
            </LinearLayout>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="94dip"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:layout_marginTop="10dip"
                android:scrollbarThumbVertical="@drawable/upgrade_dialog_scroll" >
"

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="94dip"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvMsg"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="2dip"
                        android:textColor="@color/secondary_gray"
                        android:textSize="@dimen/textsize_14sp" />

                    <TextView
                        android:id="@+id/tvMsg2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="6dip"
                        android:paddingLeft="14dip"
                        android:paddingRight="14dip"
                        android:paddingTop="14dip"
                        android:textColor="@color/secondary_gray"
                        android:textSize="@dimen/textsize_12sp"
                        android:visibility="gone" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dip"
            android:layout_marginRight="14dip" >

            <LinearLayout
                android:id="@+id/leftSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone" />

            <Button
                android:id="@+id/messageBoxBtn1"
                android:layout_width="0dip"
                android:layout_height="40dip"
                android:layout_marginBottom="10dip"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_black_selector"
                android:text="@string/dialog_default_cancel_title"
                android:textColor="@color/secondary_gray"
                android:textSize="@dimen/textsize_14sp" />

            <Button
                android:id="@+id/messageBoxBtn2"
                android:layout_width="0dip"
                android:layout_height="40dip"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="12dip"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_orange_selector"
                android:text="@string/confirm_upgrade"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_14sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/rightSpacer"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:orientation="horizontal"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>